# hermes-gpu-ray-tracer

./: CMakeLists.txt  LICENSE  README.md  out.ppm
src/: CPURayTracer.cpp  CPURayTracer.hpp  Camera.cu  Camera.hpp  EnvironmentMap.hpp  Geometry.hpp  HitRecord.hpp  Hittable.hpp  IHittable.hpp  Interval.hpp  Light.hpp  Main.cpp  Material.hpp  Mesh.hpp  Model.hpp  Plane.hpp  Ray.hpp  Scene.hpp  Sphere.hpp  Timer.hpp  Utility.hpp  Vec3f.hpp
src/Kernels/: GPURayTracer.cu  GPURayTracer.h  Render.cu
